<resources>
	<string name="app_name" translatable="false">Mastodon</string>
	<string name="get_started">Create account</string>
	<string name="already_have_account">I already have an account</string>
	<string name="log_in">Log in</string>
	<string name="next">Next</string>
	<string name="loading_instance">Retrieving server info…</string>
	<string name="error">Error</string>
	<string name="not_a_mastodon_instance">%s doesn\'t appear to be a Mastodon server.</string>
	<string name="ok">OK</string>
	<string name="preparing_auth">Preparing for authentication…</string>
	<string name="finishing_auth">Finishing authentication…</string>
	<string name="user_boosted">%s reblogged</string>
	<string name="in_reply_to">In reply to %s</string>
	<string name="notifications">Notifications</string>
	<string name="user_followed_you">followed you</string>
	<string name="user_sent_follow_request">sent you a follow request</string>
	<string name="user_favorited">favorited your post</string>
	<string name="notification_boosted">reblogged your post</string>
	<string name="poll_ended">poll ended</string>
	<string name="time_seconds">%ds</string>
	<string name="time_minutes">%dm</string>
	<string name="time_hours">%dh</string>
	<string name="time_days">%dd</string>
	<string name="share_toot_title">Share</string>
	<string name="settings">Settings</string>
	<string name="publish">Publish</string>
	<string name="discard_draft">Discard draft?</string>
	<string name="discard">Discard</string>
	<string name="cancel">Cancel</string>
	<plurals name="followers">
		<item quantity="one">follower</item>
		<item quantity="other">followers</item>
	</plurals>
	<plurals name="following">
		<item quantity="one">following</item>
		<item quantity="other">following</item>
	</plurals>
	<string name="posts">Posts</string>
	<string name="posts_and_replies">Posts and Replies</string>
	<string name="media">Media</string>
	<string name="profile_about">About</string>
	<string name="button_follow">Follow</string>
	<string name="button_following">Following</string>
	<string name="edit_profile">Edit Profile</string>
	<string name="mention_user">Mention %s</string>
	<string name="share_user">Share %s</string>
	<string name="mute_user">Mute %s</string>
	<string name="unmute_user">Unmute %s</string>
	<string name="block_user">Block %s</string>
	<string name="unblock_user">Unblock %s</string>
	<string name="report_user">Report %s</string>
	<string name="block_domain">Block %s</string>
	<string name="unblock_domain">Unblock %s</string>
	<plurals name="x_posts">
		<item quantity="one">%,d post</item>
		<item quantity="other">%,d posts</item>
	</plurals>
	<string name="profile_joined">Joined</string>
	<string name="done">Done</string>
	<string name="loading">Loading…</string>
	<string name="field_label">Label</string>
	<string name="field_content">Content</string>
	<string name="saving">Saving…</string>
	<string name="post_from_user">Post from %s</string>
	<string name="poll_option_hint">Option %d</string>
	<plurals name="x_minutes">
		<item quantity="one">%d minute</item>
		<item quantity="other">%d minutes</item>
	</plurals>
	<plurals name="x_hours">
		<item quantity="one">%d hour</item>
		<item quantity="other">%d hours</item>
	</plurals>
	<plurals name="x_days">
		<item quantity="one">%d day</item>
		<item quantity="other">%d days</item>
	</plurals>
	<string name="compose_poll_duration">Duration: %s</string>
	<plurals name="x_seconds_left">
		<item quantity="one">%d second left</item>
		<item quantity="other">%d seconds left</item>
	</plurals>
	<plurals name="x_minutes_left">
		<item quantity="one">%d minute left</item>
		<item quantity="other">%d minutes left</item>
	</plurals>
	<plurals name="x_hours_left">
		<item quantity="one">%d hour left</item>
		<item quantity="other">%d hours left</item>
	</plurals>
	<plurals name="x_days_left">
		<item quantity="one">%d day left</item>
		<item quantity="other">%d days left</item>
	</plurals>
	<plurals name="x_voters">
		<item quantity="one">%,d voter</item>
		<item quantity="other">%,d voters</item>
	</plurals>
	<string name="poll_closed">Closed</string>
	<string name="confirm_mute_title">Mute Account</string>
	<string name="confirm_mute">Confirm to mute %s</string>
	<string name="do_mute">Mute</string>
	<string name="confirm_unmute_title">Unmute Account</string>
	<string name="confirm_unmute">Confirm to unmute %s</string>
	<string name="do_unmute">Unmute</string>
	<string name="confirm_block_title">Block Account</string>
	<string name="confirm_block_domain_title">Block Domain</string>
	<string name="confirm_block">Confirm to block %s</string>
	<string name="do_block">Block</string>
	<string name="confirm_unblock_title">Unblock Account</string>
	<string name="confirm_unblock_domain_title">Unblock Domain</string>
	<string name="confirm_unblock">Confirm to unblock %s</string>
	<string name="do_unblock">Unblock</string>
	<string name="button_muted">Muted</string>
	<string name="button_blocked">Blocked</string>
	<string name="action_vote">Vote</string>
	<string name="tap_to_reveal">Tap to reveal</string>
	<string name="delete">Delete</string>
	<string name="confirm_delete_title">Delete Post</string>
	<string name="confirm_delete">Are you sure you want to delete this post?</string>
	<string name="deleting">Deleting…</string>
	<string name="notification_channel_audio_player">Audio playback</string>
	<string name="play">Play</string>
	<string name="pause">Pause</string>
	<string name="log_out">Sign out</string>
	<string name="add_account">Add account</string>
	<string name="search_hint">Search</string>
	<string name="hashtags">Hashtags</string>
	<string name="news">News</string>
	<string name="for_you">For you</string>
	<string name="all_notifications">All</string>
	<string name="mentions">Mentions</string>
	<plurals name="x_people_talking">
		<item quantity="one">%d person is talking</item>
		<item quantity="other">%d people are talking</item>
	</plurals>
	<plurals name="discussed_x_times">
		<item quantity="one">Discussed %d time</item>
		<item quantity="other">Discussed %d times</item>
	</plurals>
	<string name="report_title">Report %s</string>
	<string name="report_choose_reason">What\'s wrong with this post?</string>
	<string name="report_choose_reason_account">What\'s wrong with %s?</string>
	<string name="report_choose_reason_subtitle">Select the best match</string>
	<string name="report_reason_personal">I don\'t like it</string>
	<string name="report_reason_personal_subtitle">It is not something you want to see</string>
	<string name="report_reason_spam">It\'s spam</string>
	<string name="report_reason_spam_subtitle">Malicious links, fake engagement, or repetitive replies</string>
	<string name="report_reason_violation">It violates server rules</string>
	<string name="report_reason_violation_subtitle">You are aware that it breaks specific rules</string>
	<string name="report_reason_other">It\'s something else</string>
	<string name="report_reason_other_subtitle">The issue does not fit into other categories</string>
	<string name="report_choose_rule">Which rules are being violated?</string>
	<string name="report_choose_rule_subtitle">Select all that apply</string>
	<string name="report_choose_posts">Are there any posts that back up this report?</string>
	<string name="report_choose_posts_subtitle">Select all that apply</string>
	<string name="report_comment_title">Is there anything else we should know?</string>
	<string name="report_comment_hint">Additional comments</string>
	<string name="sending_report">Sending report…</string>
	<string name="report_sent_title">Thanks for reporting, we\'ll look into this.</string>
	<string name="report_sent_subtitle">While we review this, you can take action against %s.</string>
	<string name="unfollow_user">Unfollow %s</string>
	<string name="unfollow">Unfollow</string>
	<string name="mute_user_explain">You won\'t see their posts or reblogs in your home feed. They won\'t know they\'ve been muted.</string>
	<string name="block_user_explain">They will no longer be able to follow or see your posts, but they can see if they\'ve been blocked.</string>
	<string name="report_personal_title">Don\'t want to see this?</string>
	<string name="report_personal_subtitle">When you see something you don\'t like on Mastodon, you can remove the person from your experience.</string>
	<string name="back">Back</string>
	<string name="instance_catalog_title">Mastodon is made of users on different servers.</string>
	<string name="instance_catalog_subtitle">Pick a server based on your interests, region, or a general purpose one. You can still connect with everyone, regardless of server.</string>
	<string name="search_communities">Server name or URL</string>
	<string name="instance_rules_title">Server Rules</string>
	<string name="instance_rules_subtitle">By continuing, you agree to follow by the following rules set and enforced by the %s moderators.</string>
	<string name="signup_title">Create Account</string>
	<string name="edit_photo">edit</string>
	<string name="display_name">Name</string>
	<string name="username">Username</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm password</string>
	<string name="password_note">Include capital letters, special characters, and numbers to increase your password strength.</string>
	<string name="category_academia">Academia</string>
	<string name="category_activism">Activism</string>
	<string name="category_all">All</string>
	<string name="category_art">Art</string>
	<string name="category_food">Food</string>
	<string name="category_furry">Furry</string>
	<string name="category_games">Games</string>
	<string name="category_general">General</string>
	<string name="category_journalism">Journalism</string>
	<string name="category_lgbt">LGBT</string>
	<string name="category_music">Music</string>
	<string name="category_regional">Regional</string>
	<string name="category_tech">Tech</string>
	<string name="confirm_email_title">Check Your Inbox</string>
	<string name="confirm_email_subtitle">Tap the link we sent you to verify %s. We\'ll wait right here.</string>
	<string name="confirm_email_didnt_get">Didn\'t get a link?</string>
	<string name="resend">Resend</string>
	<string name="open_email_app">Open email app</string>
	<string name="resent_email">Confirmation email sent</string>
	<string name="compose_hint">Type or paste what\'s on your mind</string>
	<string name="content_warning">Content warning</string>
	<string name="add_image_description">Add image description…</string>
	<string name="retry_upload">Retry upload</string>
	<string name="edit_image">Edit image</string>
	<string name="save">Save</string>
	<string name="add_alt_text">Add alt text</string>
	<string name="alt_text_subtitle">Alt text describes your photos for people with low or no vision. Try to only include enough detail to understand the context.</string>
	<string name="alt_text_hint">e.g. A dog looking around suspiciously with narrowed eyes at the camera.</string>
	<string name="visibility_public">Public</string>
	<string name="visibility_followers_only">Followers only</string>
	<string name="visibility_private">Only people I mention</string>
	<string name="search_all">All</string>
	<string name="search_people">People</string>
	<string name="recent_searches">Recent searches</string>
	<string name="step_x_of_n">Step %1$d of %2$d</string>
	<string name="skip">Skip</string>
	<string name="notification_type_follow">New followers</string>
	<string name="notification_type_favorite">Favorites</string>
	<string name="more_options">More options</string>
	<string name="add_media">Add media</string>
	<string name="add_poll">Add a poll</string>
	<string name="emoji">Emoji</string>
	<string name="post_visibility">Post visibility</string>
	<string name="open_in_browser">Open in browser</string>
	<string name="hide_boosts_from_user">Hide reblogs from %s</string>
</resources>